@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="context.otaku" version="0.0.9" name="otaku - Global Context Menu Items" provider-name="TeamOtaku">
+<addon id="context.otaku" version="0.0.10" name="otaku - Global Context Menu Items" provider-name="TeamOtaku">
   <requires>
     <!-- <import addon="xbmc.python" version="2.24.0" /> -->
   </requires>
@@ -46,7 +46,7 @@
       <fanart>fanart.jpg</fanart>
     </assets>
     <news>
-Changelog 0.0.9:
+Changelog 0.0.10:
 - Initial release
     </news>
   </extension>
