@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.otaku" name="Otaku" provider-name="TeamOtaku" version="0.3.83">
+<addon id="plugin.video.otaku" name="Otaku" provider-name="TeamOtaku" version="0.3.84">
   <requires>
     <!-- <import addon="xbmc.python" version="2.24.0"/> -->
     <import addon="script.module.beautifulsoup4" version="4.5.3" />
     <import addon="script.module.inputstreamhelper" version="0.3.3" />
     <import addon="script.module.six" version="1.15.0"/>
     <import addon="script.module.kodi-six" version="0.1.3"/>
-    <import addon="context.otaku" version="0.0.9"/>
+    <import addon="context.otaku" version="0.0.10"/>
     <import addon="script.otaku.themepak" version="0.0.7"/>
     <!-- <import addon="script.module.web-pdb" version="1.6.0"/> -->
   </requires>
@@ -26,8 +26,10 @@
       <fanart>fanart.jpg</fanart>
     </assets>
     <news>
-Changelog 0.3.83 [20230625]:
-- No code changes, linting only
+Changelog 0.3.84 [20230627]:
+- Added Chiaki to get watch order
+- Added New Context menu "Get Watch Order"
+- Huge thanks to @Pahiro for adding this.
     </news>
   </extension>
 </addon>
