@@ -28,7 +28,7 @@ dataPath = TRANSLATEPATH(addonInfo('profile'))
 ADDON_PATH = __settings__.getAddonInfo('path')
 try:
     _kodiver = float(xbmcaddon.Addon('xbmc.addon').getAddonInfo('version')[:4])
-except ValueError: pass #Avoid error while executing unit tests
+except ValueError: pass # Avoid error while executing unit tests
 
 cacheFile = os.path.join(dataPath, 'cache.db')
 cacheFile_lock = threading.Lock()
